# likely-music

./: .gitignore  ChangeLog.md  README.md  default.nix  example-graph.json  example-request.json  likely-music-backend.nix  likely-music-service.nix  likely-music.cabal  pkgs.nix  shell.nix
backend/: Api.hs  Main.hs
doc/einreichung/: README.md  architektur.gv  einreichung.tex  example-graph-interpretation.gv  example-graph-interpretation2.gv  example-graph.gv
lib/Sound/: Likely.hs
src/Sound/: Likely.hs
web/: .babelrc  .eslintrc.js  GNUmakefile  default.nix  package-lock.json  package.json
web/source/: custom.css  index.html  main.js
