name:                likely-music
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              sternenseemann
maintainer:          git@lukasepple.de
-- copyright:           
category:            Sound
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , README.md
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Likely
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , Euterpea
                     , containers
                     , PortMidi
                     , random
                     , text
                     , aeson
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable likely-music-backend
  default-language:    Haskell2010
  hs-source-dirs:      backend
  main-is:             Main.hs
  other-modules:       Api
  build-depends:       base
                     , likely-music
                     , aeson
                     , containers
                     , Euterpea
                     , text
                     , bytestring
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , HCodecs
                     , random
                     , process
                     , directory
                     , filepath
